environments/herb/apps/eda-demo-consumer/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: eda-demo-order-consumer
    app.kubernetes.io/name: eda-demo-order-consumer
    app.kubernetes.io/version: 1.0.0
  name: eda-demo-order-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: eda-demo-order-consumer
      app.kubernetes.io/version: 1.0.0
  template:
    metadata:
      labels:
        app: eda-demo-order-consumer
        app.kubernetes.io/name: eda-demo-order-consumer
        app.kubernetes.io/version: 1.0.0
    spec:
      containers:
      - args:
        - -Dquarkus.http.host=0.0.0.0
        - -Djava.util.logging.manager=org.jboss.logmanager.LogManager
        - -jar
        - /deployments/quarkus-run.jar
        command:
        - java
        image: quay.io/ibmcase/eda-demo-order-consumer
        imagePullPolicy: Always
        #imagePullSecrets:
        #- name: jbcodeforce-pull-secret
        # imagePullPolicy: IfNotPresent
        name: eda-demo-order-consumer
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /deployments/certs/server
          name: kafka-cert
          readOnly: false
          subPath: ""
        - mountPath: /deployments/certs/user
          name: user-cert
          readOnly: false
          subPath: ""
      volumes:
      - name: kafka-cert
        secret:
          optional: false
          secretName: es-demo-cluster-ca-cert
      - name: user-cert
        secret:
          optional: true
          secretName: es-tls-user
