environments/herb/apps/eda-demo-consumer/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eda-demo-order-consumer
    app.kubernetes.io/name: eda-demo-order-consumer
    app.kubernetes.io/version: 1.0.0
  name: eda-demo-order-consumer
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app.kubernetes.io/name: eda-demo-order-consumer
    app.kubernetes.io/version: 1.0.0
  type: ClusterIP
